// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`treeCleaner 1`] = `[]`;

exports[`treeFind 1`] = `
{
  "children": [],
  "id": 4,
  "parent": {
    "children": [
      {
        "children": [],
        "id": 2,
        "parent": [Circular],
        "pid": 1,
        "value": 2,
      },
      [Circular],
    ],
    "id": 1,
    "value": 1,
  },
  "pid": 1,
  "value": 4,
}
`;

exports[`treeFromList 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "id": 2,
        "parent": [Circular],
        "pid": 1,
        "value": 2,
      },
      {
        "children": [],
        "id": 4,
        "parent": [Circular],
        "pid": 1,
        "value": 4,
      },
    ],
    "id": 1,
    "value": 1,
  },
  {
    "children": [
      {
        "children": [],
        "id": 0,
        "parent": [Circular],
        "pid": 3,
        "value": 0,
      },
    ],
    "id": 3,
    "value": 3,
  },
]
`;

exports[`treeToList 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "id": 2,
        "parent": [Circular],
        "pid": 1,
        "value": 2,
      },
      {
        "children": [],
        "id": 4,
        "parent": [Circular],
        "pid": 1,
        "value": 4,
      },
    ],
    "id": 1,
    "value": 1,
  },
  {
    "children": [],
    "id": 2,
    "parent": {
      "children": [
        [Circular],
        {
          "children": [],
          "id": 4,
          "parent": [Circular],
          "pid": 1,
          "value": 4,
        },
      ],
      "id": 1,
      "value": 1,
    },
    "pid": 1,
    "value": 2,
  },
  {
    "children": [],
    "id": 4,
    "parent": {
      "children": [
        {
          "children": [],
          "id": 2,
          "parent": [Circular],
          "pid": 1,
          "value": 2,
        },
        [Circular],
      ],
      "id": 1,
      "value": 1,
    },
    "pid": 1,
    "value": 4,
  },
  {
    "children": [
      {
        "children": [],
        "id": 0,
        "parent": [Circular],
        "pid": 3,
        "value": 0,
      },
    ],
    "id": 3,
    "value": 3,
  },
  {
    "children": [],
    "id": 0,
    "parent": {
      "children": [
        [Circular],
      ],
      "id": 3,
      "value": 3,
    },
    "pid": 3,
    "value": 0,
  },
]
`;

exports[`treeTraverse 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "id": 2,
        "parent": [Circular],
        "pid": 1,
        "value": 3,
      },
      {
        "children": [],
        "id": 4,
        "parent": [Circular],
        "pid": 1,
        "value": 5,
      },
    ],
    "id": 1,
    "value": 2,
  },
  {
    "children": [
      {
        "children": [],
        "id": 0,
        "parent": [Circular],
        "pid": 3,
        "value": 1,
      },
    ],
    "id": 3,
    "value": 4,
  },
]
`;
